@@ -1,6 +1,6 @@
 MIT License
 
-Copyright (c) 2012-2020 Softmotions Ltd <info@softmotions.com>
+Copyright (c) 2012-2021 Softmotions Ltd <info@softmotions.com>
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
